# NX-Save-Sync

./: .gitignore  Makefile  README.md
desktop/: config.json  main.py  pyproject.toml  requirements.txt
include/: main.h  ui.h  util.h
src/: main.c  pull.c  push.c  send.c  ui.c  util.c  zip.c
switch/: Makefile
switch/include/: main.h  util.h
switch/src/: main.c  ui.c  util.c
