[build-system]
requires = ["cx_Freeze"]
build-backend = "cx_Freeze"

[project]
name = "NX-Save-Sync"
version = "2.3.0"
description = "NX-Save-Sync"

[tool.cxfreeze]
executables = [
    {script = "main.py", base = "gui", icon = "icon.ico", target_name = "NX-Save-Sync"}
]

[tool.cxfreeze.build_exe]
include_files = [
    ['include/icon.ico', 'include/icon.ico']
]